--- a/registration/index_style.css
+++ b/registration/index_style.css
@@ -108,3 +108,6 @@ form, .content {
     border: 1px solid #3c763d;
     margin-bottom: 20px;
 }
+div button {
+    float: right;
+    margin: 50px auto 0px;
